@@ -11,23 +11,25 @@ import java.util.Set;
 import java.util.UUID;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mapstruct.factory.Mappers;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.justice.laa.dstew.access.entity.ApplicationEntity;
 import uk.gov.justice.laa.dstew.access.entity.CaseworkerEntity;
 import uk.gov.justice.laa.dstew.access.entity.IndividualEntity;
 import uk.gov.justice.laa.dstew.access.model.Application;
-import uk.gov.justice.laa.dstew.access.model.ApplicationContent;
 import uk.gov.justice.laa.dstew.access.model.ApplicationCreateRequest;
+import uk.gov.justice.laa.dstew.access.model.ApplicationCreateRequestIndividual;
 import uk.gov.justice.laa.dstew.access.model.ApplicationStatus;
 import uk.gov.justice.laa.dstew.access.model.ApplicationUpdateRequest;
-import uk.gov.justice.laa.dstew.access.model.ApplicationCreateRequestIndividual;
 import uk.gov.justice.laa.dstew.access.model.Opponent;
-import uk.gov.justice.laa.dstew.access.model.Proceeding;
 import uk.gov.justice.laa.dstew.access.model.Provider;
 import uk.gov.justice.laa.dstew.access.utils.generator.DataGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationContentGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationCreateRequestGenerator;
 import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationEntityGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationUpdateRequestGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.LinkedApplicationsGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.caseworker.CaseworkerGenerator;
 
 @ExtendWith(MockitoExtension.class)
 public class ApplicationMapperTest extends BaseMapperTest {
@@ -42,23 +44,20 @@ public class ApplicationMapperTest extends BaseMapperTest {
     ApplicationStatus status = ApplicationStatus.APPLICATION_SUBMITTED;
     String laaReference = "Ref456";
     int schemaVersion = 2;
-    Map<String, Object> applicationContent = Map.of("key1", "value1", "key2", 456);
     Instant createdAt = Instant.now().minusSeconds(600000);
     Instant updatedAt = Instant.now();
-    Set<IndividualEntity> individuals = Set.of();
     String officeCode = "officeCode";
 
-    ApplicationEntity expectedApplicationEntity = ApplicationEntity.builder()
+    ApplicationEntity expectedApplicationEntity = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
         .id(id)
         .status(status)
         .laaReference(laaReference)
         .schemaVersion(schemaVersion)
-        .applicationContent(applicationContent)
         .createdAt(createdAt)
         .modifiedAt(updatedAt)
-        .individuals(individuals)
+        .individuals(Set.of())
         .officeCode(officeCode)
-        .build();
+        .applicationContent(Map.of()));
 
     Application actualApplication = applicationMapper.toApplication(expectedApplicationEntity);
 
@@ -79,17 +78,8 @@ public class ApplicationMapperTest extends BaseMapperTest {
 
   @Test
   void givenApplicationWithNullCaseworker_whenToApplication_thenMapsFieldsCorrectlyWithNullCaseworker() {
-    Instant createdAt = Instant.now();
-    Instant modifiedAt = Instant.now();
-    Set<IndividualEntity> individuals = Set.of();
-    CaseworkerEntity caseworker = null;
-
-    ApplicationEntity expectedApplicationEntity = ApplicationEntity.builder()
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .caseworker(caseworker)
-        .individuals(individuals)
-        .build();
+    ApplicationEntity expectedApplicationEntity = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
+        .caseworker(null));
 
     Application actualApplication = applicationMapper.toApplication(expectedApplicationEntity);
     assertThat(actualApplication.getAssignedTo()).isNull();
@@ -98,18 +88,12 @@ public class ApplicationMapperTest extends BaseMapperTest {
   @Test
   void givenApplicationWithCaseworker_whenToApplication_thenMapsFieldsCorrectlyWithCaseworker() {
     UUID caseworkerId = UUID.randomUUID();
-    Instant createdAt = Instant.now();
-    Instant modifiedAt = Instant.now();
-    Set<IndividualEntity> individuals = Set.of();
 
-    CaseworkerEntity caseworker = CaseworkerEntity.builder().id(caseworkerId).build();
+    CaseworkerEntity caseworker = DataGenerator.createDefault(CaseworkerGenerator.class, builder -> builder
+        .id(caseworkerId));
 
-    ApplicationEntity expectedApplicationEntity = ApplicationEntity.builder()
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .caseworker(caseworker)
-        .individuals(individuals)
-        .build();
+    ApplicationEntity expectedApplicationEntity = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
+        .caseworker(caseworker));
 
     Application actualApplication = applicationMapper.toApplication(expectedApplicationEntity);
     assertThat(actualApplication.getAssignedTo()).isEqualTo(caseworkerId);
@@ -118,32 +102,25 @@ public class ApplicationMapperTest extends BaseMapperTest {
   @Test
   void givenApplicationCreateRequest_whenToApplicationEntity_thenMapsFieldsCorrectly() {
     ApplicationStatus status = ApplicationStatus.APPLICATION_SUBMITTED;
-    UUID applicationContentId = UUID.randomUUID();
-
-    ApplicationContent applicationContent = ApplicationContent.builder()
-        .id(applicationContentId)
-        .proceedings(List.of(
-            Proceeding.builder()
-                .leadProceeding(true)
-                .categoryOfLaw("Crime")
-                .matterType("Defence")
-                .usedDelegatedFunctions(true)
-                .description("Test proceeding")
-                .build()
-        )).build();
     String laaReference = "laa_reference";
     List<ApplicationCreateRequestIndividual> expectedIndividuals = List.of(
         ApplicationCreateRequestIndividual.builder().build(),
         ApplicationCreateRequestIndividual.builder().build()
     );
 
-    ApplicationCreateRequest expectedApplicationCreateRequest = ApplicationCreateRequest.builder()
-        .status(status)
-        .applicationContent(MapperUtil.getObjectMapper().convertValue(applicationContent, Map.class))
-        .laaReference(laaReference)
-        .individuals(expectedIndividuals)
-        .build();
+    Map<String, Object> applicationContent = (Map<String, Object>) objectMapper
+        .convertValue(DataGenerator.createDefault(ApplicationContentGenerator.class, builder ->
+          builder.status(String.valueOf(ApplicationStatus.APPLICATION_IN_PROGRESS))
+              .laaReference(laaReference)
+              .allLinkedApplications(DataGenerator.createMultipleDefault(LinkedApplicationsGenerator.class, 2))
+        ), Map.class);
 
+    ApplicationCreateRequest expectedApplicationCreateRequest = DataGenerator.createDefault(
+        ApplicationCreateRequestGenerator.class, builder -> builder
+            .status(status)
+            .laaReference(laaReference)
+            .individuals(expectedIndividuals)
+            .applicationContent(applicationContent));
 
     ApplicationEntity actualApplicationEntity = applicationMapper.toApplicationEntity(expectedApplicationCreateRequest);
 
@@ -158,7 +135,7 @@ public class ApplicationMapperTest extends BaseMapperTest {
     assertThat(actualApplicationEntity.getApplicationContent())
         .isNotNull()
         .usingRecursiveComparison()
-        .isEqualTo(MapperUtil.getObjectMapper().convertValue(applicationContent, Map.class));
+        .isEqualTo(applicationContent);
   }
 
   @Test
@@ -174,18 +151,20 @@ public class ApplicationMapperTest extends BaseMapperTest {
     Instant createdAt = Instant.now().minusSeconds(10000);
     Instant modifiedAt = Instant.now().minusSeconds(5000);
 
-    ApplicationEntity entityToAffect = ApplicationEntity.builder()
+    ApplicationEntity entityToAffect = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
         .status(initialStatus)
         .applicationContent(initialContent)
         .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+        .modifiedAt(modifiedAt));
 
-    ApplicationUpdateRequest req = new ApplicationUpdateRequest(); // all nulls except applicationContent
+    ApplicationUpdateRequest req = DataGenerator.createDefault(ApplicationUpdateRequestGenerator.class, builder -> builder
+        .status(null)
+        .applicationContent(null));
+
     applicationMapper.updateApplicationEntity(entityToAffect, req);
 
     assertThat(entityToAffect.getStatus()).isEqualTo(initialStatus);
-    assertThat(entityToAffect.getApplicationContent()).isNotNull().hasSize(0);
+    assertThat(entityToAffect.getApplicationContent()).isNull();
     assertThat(entityToAffect.getCreatedAt()).isEqualTo(createdAt);
     assertThat(entityToAffect.getModifiedAt()).isEqualTo(modifiedAt);
   }
@@ -197,20 +176,18 @@ public class ApplicationMapperTest extends BaseMapperTest {
     Instant createdAt = Instant.now().minusSeconds(10000);
     Instant modifiedAt = Instant.now().minusSeconds(5000);
 
-    ApplicationEntity entityToAffect = ApplicationEntity.builder()
+    ApplicationEntity entityToAffect = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
         .status(initialStatus)
         .applicationContent(initialContent)
         .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+        .modifiedAt(modifiedAt));
 
     ApplicationStatus updatedStatus = ApplicationStatus.APPLICATION_SUBMITTED;
     Map<String, Object> updatedContent = Map.of("newKey", "newValue");
 
-    ApplicationUpdateRequest applicationUpdateRequest = ApplicationUpdateRequest.builder()
+    ApplicationUpdateRequest applicationUpdateRequest = DataGenerator.createDefault(ApplicationUpdateRequestGenerator.class, builder -> builder
         .status(updatedStatus)
-        .applicationContent(updatedContent)
-        .build();
+        .applicationContent(updatedContent));
 
     applicationMapper.updateApplicationEntity(entityToAffect, applicationUpdateRequest);
 
@@ -222,41 +199,25 @@ public class ApplicationMapperTest extends BaseMapperTest {
 
   @Test
   void givenApplicationWithOpponents_whenToApplication_thenMapsOpponentsCorrectly() {
-    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-    Instant createdAt = Instant.now().minusSeconds(10000);
-    Instant modifiedAt = Instant.now().minusSeconds(5000);
     Map<String, Object> opposable = Map.of(
         "opposableType", "ApplicationMeritsTask::Individual",
         "firstName", "John",
         "lastName", "Smith",
         "name", "Acme Ltd"
     );
-
-    Map<String, Object> opponent = Map.of(
-        "opposable", opposable
-    );
-
-    Map<String, Object> merits = Map.of(
-        "opponents", List.of(opponent)
-    );
-
     Map<String, Object> content = Map.of(
-        "applicationMerits", merits
+        "applicationMerits", Map.of("opponents", List.of(Map.of("opposable", opposable)))
     );
 
-    ApplicationEntity entity = ApplicationEntity.builder()
-        .status(initialStatus)
-        .applicationContent(content)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+    ApplicationEntity entity = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
+        .applicationContent(content));
 
     Application result = applicationMapper.toApplication(entity);
 
     assertThat(result.getOpponents()).isNotNull();
     assertThat(result.getOpponents()).hasSize(1);
 
-    Opponent mapped = result.getOpponents().get(0);
+    Opponent mapped = result.getOpponents().getFirst();
     assertThat(mapped.getOpposableType()).isEqualTo("ApplicationMeritsTask::Individual");
     assertThat(mapped.getFirstName()).isEqualTo("John");
     assertThat(mapped.getLastName()).isEqualTo("Smith");
@@ -265,23 +226,12 @@ public class ApplicationMapperTest extends BaseMapperTest {
 
   @Test
   void givenApplicationWithEmptyOpponentsList_whenToApplication_thenReturnsEmptyList() {
-    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-    Instant createdAt = Instant.now().minusSeconds(10000);
-    Instant modifiedAt = Instant.now().minusSeconds(5000);
-    Map<String, Object> merits = Map.of(
-        "opponents", List.of()
-    );
-
     Map<String, Object> content = Map.of(
-        "applicationMerits", merits
+        "applicationMerits", Map.of("opponents", List.of())
     );
 
-    ApplicationEntity entity = ApplicationEntity.builder()
-        .applicationContent(content)
-        .status(initialStatus)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+    ApplicationEntity entity = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
+        .applicationContent(content));
 
     Application result = applicationMapper.toApplication(entity);
 
@@ -291,40 +241,24 @@ public class ApplicationMapperTest extends BaseMapperTest {
 
   @Test
   void givenOpponentWithMissingFirstName_whenToApplication_thenMapsRemainingFields() {
-    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-    Instant createdAt = Instant.now().minusSeconds(10000);
-    Instant modifiedAt = Instant.now().minusSeconds(5000);
     Map<String, Object> opposable = Map.of(
         "opposableType", "ApplicationMeritsTask::Individual",
         "lastName", "Smith",
         "name", "Acme Ltd"
     );
-
-    Map<String, Object> opponent = Map.of(
-        "opposable", opposable
-    );
-
-    Map<String, Object> merits = Map.of(
-        "opponents", List.of(opponent)
-    );
-
     Map<String, Object> content = Map.of(
-        "applicationMerits", merits
+        "applicationMerits", Map.of("opponents", List.of(Map.of("opposable", opposable)))
     );
 
-    ApplicationEntity entity = ApplicationEntity.builder()
-        .applicationContent(content)
-        .status(initialStatus)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+    ApplicationEntity entity = DataGenerator.createDefault(ApplicationEntityGenerator.class, builder -> builder
+        .applicationContent(content));
 
     Application result = applicationMapper.toApplication(entity);
 
     assertThat(result.getOpponents()).isNotNull();
     assertThat(result.getOpponents()).hasSize(1);
 
-    var mapped = result.getOpponents().get(0);
+    var mapped = result.getOpponents().getFirst();
 
     assertThat(mapped.getOpposableType()).isEqualTo("ApplicationMeritsTask::Individual");
     assertThat(mapped.getFirstName()).isNull();
